toolchain/parse/src/types/snapshots/knot_parse__types__type_declaration__tests__enumerated.snap
---
source: toolchain/parse/src/types/type_declaration.rs
expression: ast
---
TypeDeclaration(
    Node(
        Enumerated {
            binding: Binding(
                Node(
                    Binding(
                        "foo",
                    ),
                    Range(
                        Point(
                            1,
                            6,
                        ),
                        Point(
                            1,
                            8,
                        ),
                    ),
                    (),
                ),
            ),
            variants: [
                (
                    "Fizz",
                    [],
                ),
                (
                    "Buzz",
                    [
                        TypeExpression(
                            Node(
                                Primitive(
                                    Integer,
                                ),
                                Range(
                                    Point(
                                        1,
                                        24,
                                    ),
                                    Point(
                                        1,
                                        30,
                                    ),
                                ),
                                (),
                            ),
                        ),
                    ],
                ),
            ],
        },
        Range(
            Point(
                1,
                1,
            ),
            Point(
                1,
                33,
            ),
        ),
        (),
    ),
)
