toolchain/parse/src/types/snapshots/knot_parse__types__type_declaration__tests__type_alias.snap
---
source: toolchain/parse/src/types/type_declaration.rs
expression: ast
---
TypeDeclaration(
    Node(
        TypeAlias {
            binding: Binding(
                Node(
                    Binding(
                        "foo",
                    ),
                    Range(
                        Point(
                            1,
                            6,
                        ),
                        Point(
                            1,
                            8,
                        ),
                    ),
                    (),
                ),
            ),
            value: TypeExpression(
                Node(
                    Primitive(
                        Nil,
                    ),
                    Range(
                        Point(
                            1,
                            12,
                        ),
                        Point(
                            1,
                            14,
                        ),
                    ),
                    (),
                ),
            ),
        },
        Range(
            Point(
                1,
                1,
            ),
            Point(
                1,
                14,
            ),
        ),
        (),
    ),
)
