toolchain/parse/src/types/snapshots/knot_parse__types__type_declaration__tests__view.snap
---
source: toolchain/parse/src/types/type_declaration.rs
expression: ast
---
TypeDeclaration(
    Node(
        View {
            binding: Binding(
                Node(
                    Binding(
                        "Foo",
                    ),
                    Range(
                        Point(
                            1,
                            6,
                        ),
                        Point(
                            1,
                            8,
                        ),
                    ),
                    (),
                ),
            ),
            attributes: TypeExpression(
                Node(
                    Object(
                        [
                            Required(
                                Binding(
                                    Node(
                                        Binding(
                                            "bar",
                                        ),
                                        Range(
                                            Point(
                                                1,
                                                12,
                                            ),
                                            Point(
                                                1,
                                                14,
                                            ),
                                        ),
                                        (),
                                    ),
                                ),
                                TypeExpression(
                                    Node(
                                        Primitive(
                                            Nil,
                                        ),
                                        Range(
                                            Point(
                                                1,
                                                17,
                                            ),
                                            Point(
                                                1,
                                                19,
                                            ),
                                        ),
                                        (),
                                    ),
                                ),
                            ),
                            Optional(
                                Binding(
                                    Node(
                                        Binding(
                                            "fizz",
                                        ),
                                        Range(
                                            Point(
                                                1,
                                                22,
                                            ),
                                            Point(
                                                1,
                                                25,
                                            ),
                                        ),
                                        (),
                                    ),
                                ),
                                TypeExpression(
                                    Node(
                                        Primitive(
                                            Boolean,
                                        ),
                                        Range(
                                            Point(
                                                1,
                                                29,
                                            ),
                                            Point(
                                                1,
                                                35,
                                            ),
                                        ),
                                        (),
                                    ),
                                ),
                            ),
                        ],
                    ),
                    Range(
                        Point(
                            1,
                            10,
                        ),
                        Point(
                            1,
                            37,
                        ),
                    ),
                    (),
                ),
            ),
        },
        Range(
            Point(
                1,
                1,
            ),
            Point(
                1,
                37,
            ),
        ),
        (),
    ),
)
